--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </thead>
     <tbody id="tabelaJogadores">
       <tr>
-        <td>Paulo</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Willx</td>
+        <td>5</td>
+        <td>4</td>
+        <td>3</td>
+        <td>2</td>
         <td>
           <button onClick="adicionarVitoria()">Vitória</button>
         </td>
@@ -38,11 +38,11 @@
         </td>
       </tr>
       <tr>
-        <td>Rafa</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Renata</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
         <td>
           <button onClick="adicionarVitoria()">Vitória</button>
         </td>
@@ -53,6 +53,21 @@
           <button onClick="adicionarDerrota()">Derrota</button>
         </td>
       </tr>
+      <tr>
+        <td>Isadora</td>
+        <td>8</td>
+        <td>4</td>
+        <td>3</td>
+        <td>1</td>
+        <td>
+          <button onClick="adicionarVitoria()">Vitória</button>
+        </td>
+        <td>
+          <button onClick="adicionarEmpate()">Empate</button>
+        </td>
+        <td>
+          <button onClick="adicionarDerrota()">Derrota</button>
+        </td>
     </tbody>
   </table>
 </body>
